# coap-ace-poc-webapp

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  build.rs
LICENSES/: BSD-3-Clause.txt
public/: broadcast-and-close.html  index.html  manifest.json  manifest.json.license  service_worker.js  service_worker.js.in  style.css
src/: authorizations.rs  ble.rs  helpers.rs  main.rs  ws.rs
