[package]
name = "coap-ace-poc-webapp"
version = "0.1.0"
edition = "2021"
authors = [ "EDF, developed in collaboration with Christian Amsüss" ]
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "^0.19.3"
gloo-net = { version = "0.2.4", features = [ "websocket" ] }
console_error_panic_hook = "^0.1.7"
log = "^0.4"
console_log = "^0.2"
wasm-bindgen = "^0.2.83"
wasm-bindgen-futures = "^0.4.33"
futures = "0.3.25"
js-sys = "^0.3.60"
web-sys = { version = "^0.3.60", features = [ "Navigator" , "Bluetooth", "RequestDeviceOptions", "BluetoothDevice", "BluetoothRemoteGattServer", "BluetoothRemoteGattService", "BluetoothRemoteGattCharacteristic", "BluetoothLeScanFilterInit", "BluetoothCharacteristicProperties"] }
instant = { version = "0.1.12", features = [ "wasm-bindgen" ] }
dcaf = { version = "0.3.1", default-features = false }

hex-literal = "*"

coap-message = "0.2.3"
coap-gatt-utils = { git = "https://gitlab.com/oscore/coap-gatt-utils/" }
coap-numbers = "0.2.0"

ciborium = "0.2"

[patch.crates-io]
coset = { git = "https://github.com/chrysn-pull-requests/coset", branch = "oscore" }
dcaf = { git = "https://github.com/chrysn-pull-requests/dcaf-rs", branch = "oscore" }
