[package]
name = "coap-ace-poc-webapp"
version = "0.1.0"
edition = "2021"
authors = [ "EDF, developed in collaboration with Christian Amsüss" ]
license = "BSD-3-Clause"
repository = "https://gitlab.com/oscore/coap-ace-poc-webapp/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "^0.20", features = [ "csr" ] }
gloo-net = { version = "0.2.4", features = [ "websocket" ] }
console_error_panic_hook = "^0.1.7"
log = "^0.4"
console_log = "^0.2"
wasm-bindgen = "^0.2.83"
wasm-bindgen-futures = "^0.4.33"
futures = "0.3.25"
js-sys = "^0.3.60"
web-sys = { version = "^0.3.60", features = [ "Navigator" , "Bluetooth", "RequestDeviceOptions", "BluetoothDevice", "BluetoothRemoteGattServer", "BluetoothRemoteGattService", "BluetoothRemoteGattCharacteristic", "BluetoothLeScanFilterInit", "BluetoothCharacteristicProperties"] }
instant = { version = "0.1.12", features = [ "wasm-bindgen" ] }
dcaf = { version = "0.3.1", default-features = false }
url = "2"

hex-literal = "*"

coap-message = "0.2.3"
coap-gatt-utils = { git = "https://gitlab.com/oscore/coap-gatt-utils/" }
coap-numbers = "0.2.0"

ciborium = { version = "0.2", default-features = false }
ciborium-ll = { version = "0.2", default-features = false }
ciborium-io = { version = "0.2", default-features = false }
# one of the key tools when working with CBOR and serde...
serde_bytes = "0.11"

liboscore = { git = "https://gitlab.com/oscore/liboscore/", branch = "rust-backends" }
liboscore-msgbackend = { git = "https://gitlab.com/oscore/liboscore/", branch = "rust-backends", features = [ "alloc" ] }
# only to enable the feature
# liboscore-cryptobackend = { git = "https://gitlab.com/oscore/liboscore/", branch = "rust-backends", features = [ "log_cryptographic_operations_including_secret_keys" ] }
ace-oscore-helpers = { git = "https://gitlab.com/oscore/ace-oscore-helpers/", features = [ "liboscore", "alloc" ] }
coset = "0.3.3"

rand = "0.8.5"
# to enable the right backend for rand
getrandom = { version = "0.2", features = [ "js" ] }

# Some dependency pulls in serde_cbor with no default features (std), someone else pulls in serde with default features (std), but these need to be aligned
serde_cbor = "*"

hex = "0.4.3"

[build-dependencies]
# Note that this works best when not doing shallow clones while git2 doesn't
# support these; best disable shallow clones in CI.
built = { version = "0.5.2", features = [ "git2" ] }

[patch.crates-io]
coset = { git = "https://github.com/chrysn-pull-requests/coset", branch = "oscore" }
dcaf = { git = "https://github.com/chrysn-pull-requests/dcaf-rs", branch = "oscore" }
